fix(ci): fixed jpackage ci